<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings"/>    

    <item
        android:id="@+id/action_info"
        android:showAsAction="always"
        android:icon="@drawable/ic_information_24dp"
        android:title="@string/rhythm_info_title"/>
    
    <item
        android:id="@+id/action_save"
        android:showAsAction="always"
        android:icon="@drawable/ic_save_24dp"
        android:title="@string/action_save_rhythm"/>

    <item
        android:id="@+id/action_remove"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_delete_24dp"
        android:title="@string/action_delete_rhythm"/>
    
</menu>
