<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp"
        android:orientation="vertical">

        <TextView
            android:text="@string/rhythm_title_request"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />

        <EditText
            android:id="@+id/rhythm_title"
            android:hint="@string/rhythm_title_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"/>

        <TextView
            android:text="@string/category_request"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:id="@+id/rhythm_category" />

            <ImageButton
                android:src="@drawable/ic_plus_24dp"
                android:id="@+id/add_category_btn"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:layout_width="50dp"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <TextView
            android:text="@string/measure_request"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:id="@+id/rhythm_measure" />

        <TextView
            android:text="Description:"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="12sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textIsSelectable="false" />

        <EditText
            android:id="@+id/rhythm_description"
            android:hint="@string/rhythm_description_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"/>


    </LinearLayout>
</ScrollView>
